[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromotion"
version = "0.1.0"
description = "for human eeg/ieeg time-frequency analysis with synchronized behavior"
dependencies = [
  "numpy",
  "scipy",
  "h5py"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

